--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,16 @@
 .DS_Store
 
 # npm
-node_modules
+/node_modules
+
+# Release task
+/release
+
+# Build files
+/js/*.js
+/js/*.map
+/css/*.css
+/css/*.map
 
 # Sass
 .sass-cache
