--- a/package.json
+++ b/package.json
@@ -1,34 +1,38 @@
 {
-  "name"           : "voice-search",
-  "version"        : "1.0.0",
-  "description"    : "Allows visitors to search the site using their voice.",
-  "private"        : true,
-  "repository"     : {
+  "name": "voice-search",
+  "title": "Voice Search",
+  "description": "Allows visitors to search the site using their voice.",
+  "version": "0.1.0",
+  "homepage": "https://spinpress.com/wordpress-web-speech-api/",
+  "author": {
+    "name": "Pascal Birchler",
+    "email": "support@spinpress.com",
+    "url": "https://pascalbirchler.com"
+  },
+  "repository": {
     "type": "git",
-    "url" : "git@github.com:swissspidy/voice-search.git"
+    "url": ""
   },
   "devDependencies": {
-    "grunt"                      : "*",
-    "grunt-autoprefixer"         : "*",
-    "grunt-concurrent"           : "*",
-    "grunt-contrib-clean"        : "*",
-    "grunt-contrib-compress"     : "*",
-    "grunt-contrib-concat"       : "*",
-    "grunt-contrib-copy"         : "*",
-    "grunt-contrib-csslint"      : "*",
-    "grunt-contrib-cssmin"       : "*",
-    "grunt-contrib-sass"         : "*",
-    "grunt-contrib-uglify"       : "*",
-    "grunt-contrib-watch"        : "*",
-    "grunt-csscomb"              : "*",
-    "grunt-newer"                : "*",
-    "grunt-scss-lint"            : "*",
-    "grunt-wp-i18n"              : "*",
-    "grunt-wp-readme-to-markdown": "*",
-    "load-grunt-config"          : "*",
-    "time-grunt"                 : "*"
+    "grunt": "~0.4.5",
+    "grunt-autoprefixer": "~3.0.0",
+    "grunt-checktextdomain": "~1.0.0",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-sass": "~0.9.2",
+    "grunt-contrib-compress": "~0.13.0",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-copy": "~0.7.0",
+    "grunt-contrib-cssmin": "~0.12.0",
+    "grunt-contrib-jshint": "~0.11.1",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.9.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-phpunit": "~0.3.6",
+    "grunt-text-replace": "~0.4.0",
+    "grunt-wp-i18n": "~0.5.1",
+    "grunt-wp-deploy": "~1.0.3",
+    "load-grunt-config": "~0.16.0",
+    "time-grunt": "~1.1.0"
   },
-  "dependencies"   : {
-    "time-grunt": "*"
-  }
+  "keywords": []
 }
