--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "voice-search",
   "title": "Voice Search",
   "description": "Allows visitors to search the site using their voice.",
-  "version": "0.1.0",
+  "version": "1.1.0-alpha",
   "homepage": "https://spinpress.com/wordpress-web-speech-api/",
   "author": {
     "name": "Pascal Birchler",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/swissspidy/voice-search"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
