--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "voice-search",
   "title": "Voice Search",
   "description": "Allows visitors to search the site using their voice.",
-  "version": "1.1.0-alpha",
+  "version": "1.1.0",
   "homepage": "https://spinpress.com/wordpress-web-speech-api/",
   "author": {
     "name": "Pascal Birchler",
