--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,3 @@
 # General
-.DS_Store
-
-# npm
-/node_modules
-
-# Release task
-/release
-
-# Build files
-/js/*.js
-/js/*.map
-/css/*.css
-/css/*.map
-
-# Sass
-.sass-cache
-
-# Vendor (e.g. Composer)
-vendor/*
-!vendor/.gitkeep
+composer.lock
+/vendor
