--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "title": "Voice Search",
   "description": "Allows visitors to search the site using their voice.",
   "version": "1.2.1",
-  "homepage": "https://spinpress.com/wordpress-web-speech-api/",
+  "homepage": "https://github.com/swissspidy/voice-search",
   "author": {
     "name": "Pascal Birchler",
-    "email": "support@spinpress.com",
+    "email": "swissspidy@chat.wordpress.org",
     "url": "https://pascalbirchler.com"
   },
   "repository": {
@@ -14,25 +14,6 @@
     "url": "https://github.com/swissspidy/voice-search"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-autoprefixer": "~3.0.0",
-    "grunt-checktextdomain": "~1.0.0",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-sass": "~0.9.2",
-    "grunt-contrib-compress": "~0.13.0",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-copy": "~0.7.0",
-    "grunt-contrib-cssmin": "~0.12.0",
-    "grunt-contrib-jshint": "~0.11.1",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "~0.9.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-phpunit": "~0.3.6",
-    "grunt-text-replace": "~0.4.0",
-    "grunt-wp-i18n": "~0.5.1",
-    "grunt-wp-deploy": "~1.0.3",
-    "load-grunt-config": "~0.16.0",
-    "time-grunt": "~1.1.0"
   },
   "keywords": []
 }
