--- a/phpunit-multisite.xml.dist
+++ b/phpunit-multisite.xml.dist
@@ -13,17 +13,18 @@
 		<ini name="error_reporting" value="32767" />
 		<ini name="display_errors" value="1" />
 		<ini name="display_startup_errors" value="1" />
+		<const name="WP_TESTS_MULTISITE" value="1" />
 	</php>
 
 	<testsuites>
-		<testsuite name="Integration Test Suite">
+		<testsuite name="Multisite Integration Test Suite">
 			<directory suffix=".php">./tests/phpunit/tests</directory>
 		</testsuite>
 	</testsuites>
 
 	<groups>
 		<exclude>
-			<group>ms-required</group>
+			<group>ms-excluded</group>
 		</exclude>
 	</groups>
 
