--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -3,7 +3,7 @@ name: Lint and Test
 on:
   push:
     branches:
-    - main
+      - main
   pull_request:
 
 jobs:
@@ -11,42 +11,30 @@ jobs:
     name: JS Lints
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Setup Node
-      uses: actions/setup-node@v2.1.5
-      with:
-        node-version: 15
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 15
+          cache: npm
 
-    - name: Cache node modules
-      uses: pat-s/always-upload-cache@v2.1.3
-      with:
-        # npm cache files are stored in `~/.npm` on Linux/macOS
-        path: ~/.npm
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
-      env:
-        cache-name: cache-node-modules
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Install dependencies
-      run: npm ci
+      - name: Lint JS
+        run: npm run lint:js
 
-    - name: Lint JS
-      run: npm run lint:js
-
-    - name: Lint CSS
-      run: npm run lint:css
+      - name: Lint CSS
+        run: npm run lint:css
 
   lint-php:
     name: PHP Lints
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -60,7 +48,7 @@ jobs:
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
 
       - name: Setup Composer cache
-        uses: pat-s/always-upload-cache@v2.1.3
+        uses: pat-s/always-upload-cache@v3.0.1
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
@@ -85,36 +73,46 @@ jobs:
         image: mariadb:latest
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: true
-          MYSQL_ROOT_PASSWORD:
+          MYSQL_ROOT_PASSWORD: ''
           MYSQL_DATABASE: wordpress_test
         ports:
-        - 3306
+          - 3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-    continue-on-error: ${{ matrix.experimental == true }}
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
         php: ['5.6']
         wp: ['latest']
         coverage: [false]
+        experimental: [false]
         include:
-        - php: '7.4'
-          wp: 'latest'
-          coverage: true
+          - php: '7.4'
+            wp: 'latest'
+            coverage: true
+            experimental: false
 
-        - php: '7.4'
-          wp: 'trunk'
-          experimental: true
+          - php: '7.4'
+            wp: 'trunk'
+            experimental: true
+
+          - php: '8.0'
+            wp: 'latest'
+            experimental: true
+
+          - php: '8.1'
+            wp: 'trunk'
+            experimental: true
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Get Composer cache directory
         id: composer-cache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
 
       - name: Setup Composer cache
-        uses: pat-s/always-upload-cache@v2.1.3
+        uses: pat-s/always-upload-cache@v3.0.1
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
@@ -142,22 +140,47 @@ jobs:
       - name: Set up tests
         run: bash bin/install-wp-tests.sh wordpress_test root '' 127.0.0.1:${{ job.services.mysql.ports['3306'] }} ${{ matrix.wp }} true
 
-      - name: Install dependencies
-        run: composer install
+      - name: Install PHP dependencies
+        uses: 'ramsey/composer-install@v1'
+        with:
+          composer-options: '--prefer-dist --no-progress --no-interaction --no-scripts'
 
-#      - name: Update PHPUnit
-#        run: composer update --ignore-platform-reqs
+      # Installs PHPUnit 9.5+ for tests against trunk and PHPUnit 7.5.x for older versions,
+      # because WordPress 5.8 and below don't support newer PHPUnit versions.
+      # PHPUnit 7.5 does support PHP 7.0 though, so we don't run an update there.
+      - name: Update PHPUnit
+        run: |
+          if [[ $WP_VERSION == "trunk" ]]; then
+            composer update --ignore-platform-reqs --no-interaction --no-scripts yoast/phpunit-polyfills --with-dependencies
+          elif [[ $PHP_VERSION != "7.0" ]] && [[ $PHP_VERSION != "5.6" ]]; then
+            composer require --ignore-platform-reqs --no-interaction --no-scripts phpunit/phpunit:^7.5 --with-dependencies
+          fi
+        env:
+          WP_VERSION: ${{ matrix.wp }}
+          PHP_VERSION: ${{ matrix.php }}
 
       - name: Run tests
-        run: composer test
+        run: |
+          composer test
+          composer test:multisite
         if: ${{ ! matrix.coverage }}
 
       - name: Run tests with coverage
-        run: composer test -- --coverage-clover coverage.xml
+        run: |
+          composer test -- --coverage-clover coverage.xml
+          composer test:multisite -- --coverage-clover coverage-multisite.xml
         if: ${{ matrix.coverage }}
 
       - name: Upload code coverage report
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v3.1.0
         with:
           file: coverage.xml
+          flags: default
+        if: ${{ matrix.coverage }}
+
+      - name: Upload code coverage report
+        uses: codecov/codecov-action@v3.1.0
+        with:
+          file: coverage-multisite.xml
+          flags: multisite
         if: ${{ matrix.coverage }}
