--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
   "config": {
     "platform": {
       "php": "5.6.20"
+    },
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   },
   "require": {
@@ -30,6 +33,7 @@
   "scripts": {
     "format": "vendor/bin/phpcbf --report-summary --report-source .",
     "lint": "vendor/bin/phpcs --report-summary --report-source .",
-    "test": "vendor/bin/phpunit"
+    "test": "vendor/bin/phpunit",
+    "test:multisite": "vendor/bin/phpunit -c phpunit-multisite.xml.dist"
   }
 }
