--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -20,7 +20,7 @@
 	<!-- We only support the latest major WordPress release. -->
 	<rule ref="WordPress.WP.DeprecatedFunctions">
 		<properties>
-			<property name="minimum_supported_version" value="5.0" />
+			<property name="minimum_wp_version" value="5.0" />
 		</properties>
 	</rule>
 
