--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -82,25 +82,17 @@ jobs:
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
-        php: ['7.0']
+        php: ['8.2', '8.1', '7.4', '7.0']
         wp: ['latest']
         coverage: [false]
         experimental: [false]
         include:
-          - php: '7.4'
+          - php: '8.0'
             wp: 'latest'
             coverage: true
             experimental: false
 
-          - php: '7.4'
-            wp: 'trunk'
-            experimental: true
-
-          - php: '8.0'
-            wp: 'latest'
-            experimental: true
-
-          - php: '8.1'
+          - php: '8.3'
             wp: 'trunk'
             experimental: true
 
