--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -82,7 +82,7 @@ jobs:
         continue-on-error: ${{ matrix.experimental }}
         strategy:
             matrix:
-                php: ['8.2', '8.1', '7.4', '7.0']
+                php: ['8.3', '8.2', '8.1', '7.4', '7.2']
                 wp: ['latest']
                 coverage: [false]
                 experimental: [false]
@@ -92,7 +92,7 @@ jobs:
                       coverage: true
                       experimental: false
 
-                    - php: '8.3'
+                    - php: '8.4'
                       wp: 'trunk'
                       experimental: true
 
