--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -82,12 +82,12 @@ jobs:
         continue-on-error: ${{ matrix.experimental }}
         strategy:
             matrix:
-                php: ['8.3', '8.2', '8.1', '7.4', '7.2']
+                php: ['8.2', '8.1', '8.0', '7.4']
                 wp: ['latest']
                 coverage: [false]
                 experimental: [false]
                 include:
-                    - php: '8.0'
+                    - php: '8.3'
                       wp: 'latest'
                       coverage: true
                       experimental: false
