--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,14 @@
 	],
 	"config": {
 		"platform": {
-			"php": "5.6.20"
+			"php": "7.4"
 		},
 		"allow-plugins": {
 			"dealerdirect/phpcodesniffer-composer-installer": true
 		}
 	},
 	"require": {
-		"php": ">=5.6.20",
-		"wearerequired/wp-requirements-check": "^1.1"
+		"php": ">=7.4"
 	},
 	"require-dev": {
 		"dealerdirect/phpcodesniffer-composer-installer": "^1.0.0",
