--- a/.github/workflows/deploy-dotorg.yml
+++ b/.github/workflows/deploy-dotorg.yml
@@ -25,6 +25,11 @@ jobs:
     - name: Build plugin
       run: npm run build
 
+    - name: Install PHP dependencies
+      uses: ramsey/composer-install@v3
+      with:
+        composer-options: '--prefer-dist --no-scripts --no-dev'
+
     - name: WordPress plugin deploy
       uses: 10up/action-wordpress-plugin-deploy@stable
       id: deploy
